# education-mentor-agentic-system

./: .env.example  .gitignore  README.md  analytics.py  config.py  exam_state.py  generation.ipynb  grader_agent.py  grader_tool.py  integration_example.py  knowledge_gap.py  learner_profile.py  learning_path.py  main.py  progress_tracker.py  pyproject.toml  requirements.txt  run_demo.py  schemas.py  state.py  tool_exam_generator.py  tool_exam_grader.py
app/: ui.py
app/agents/: base.py  deep_agent.py  edu_agent.py  exam_agent.py  grader_agent.py  rag_agent.py
app/analytics/: __init__.py  knowledge_gap.py  learner_profile.py  learning_path.py  performance.py  progress_tracker.py
app/core/: config.py  deep_state.py  edu_state.py  llm.py  registry.py  schemas.py  state.py
app/prompts/: assessment_agent.md  deep_agent.md  exam_agent.md  grader_agent.md  rag_agent.md  research_agent.md
app/tools/: base.py  course_search.py  exam_generator.py  exam_grader.py  rag_search.py
