[project]
name = "agentic-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "deepagents>=0.6.12",
    "fastembed>=0.8.0",
    "google-genai>=2.10.0",
    "gradio>=6.19.0",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "langgraph>=1.2.6",
    "pydantic-settings>=2.14.2",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
    "torch==2.4.1+cpu",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
